# abduction-studio

./: .gitignore  .gitmodules  Assinar_Como_Kuru.ps1  CMakeLists.txt  Compilar_E_Liberar.bat  README.md  Setup_Seguranca.bat  Setup_Seguranca.ps1  convert.ps1
src/: Main.cpp
src/App/: NovaDAWApplication.cpp  NovaDAWApplication.h
src/Engine/: DJEngineManager.cpp  DJEngineManager.h  EditManager.cpp  EditManager.h  EngineManager.cpp  EngineManager.h
src/UI/: DebugWindow.cpp  DebugWindow.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
src/UI/DJMode/: DJModeView.cpp  DJModeView.h
src/UI/LookAndFeel/: NovaLookAndFeel.cpp  NovaLookAndFeel.h
src/UI/Mixer/: MixerView.cpp  MixerView.h
src/UI/Timeline/: TimelineView.cpp  TimelineView.h  TrackHeaderView.cpp  TrackHeaderView.h
src/UI/Transport/: TransportBar.cpp  TransportBar.h
src/Utils/: Constants.h  Helpers.h
src/ViewModel/: TransportViewModel.cpp  TransportViewModel.h
